Amended CSS and layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,7 +109,7 @@ th{
 }
 
 #p_title{
-    padding: 15px 0;
+    padding: 50px 0;
 }
 
 /* >>>>>>>>>>>>>>>>>>>> TEXT <<<<<<<<<<<<<<<<<<<< */
